--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -15,7 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib, ArrayInversion
+  exposed-modules:     Lib 
+                     , ArrayInversion
+                     , QuicksortCounting
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
