--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -19,6 +19,7 @@ library
                      , ArrayInversion
                      , QuicksortCounting
   build-depends:       base >= 4.7 && < 5
+                     , vector
   default-language:    Haskell2010
 
 executable algorithms-exe
@@ -27,6 +28,7 @@ executable algorithms-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , algorithms
+                     , vector
   default-language:    Haskell2010
 
 test-suite algorithms-test
