--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -18,8 +18,11 @@ library
   exposed-modules:     Lib 
                      , ArrayInversion
                      , QuicksortCounting
+                     , MinCuts
   build-depends:       base >= 4.7 && < 5
                      , vector
+                     , containers >= 0.5.7.1
+                     , random >= 1.1
   default-language:    Haskell2010
 
 executable algorithms-exe
