--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -20,10 +20,14 @@ library
                      , QuicksortCounting
                      , MinCuts
                      , SCCs
+                     , Heap
+                     , LeftistHeap
+                     , Dijkstra
   build-depends:       base >= 4.7 && < 5
                      , vector
                      , containers >= 0.5.7.1
                      , random >= 1.1
+                     , parsec >= 3.1.11
   default-language:    Haskell2010
 
 executable algorithms-exe
