--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -25,6 +25,7 @@ library
                      , Dijkstra
                      , Queue
                      , LQueue
+                     , MedianMaintenance
   build-depends:       base >= 4.7 && < 5
                      , vector
                      , containers >= 0.5.7.1
@@ -40,6 +41,7 @@ executable algorithms-exe
   build-depends:       base
                      , algorithms
                      , vector
+                     , vector-algorithms
                      , containers >= 0.5.7.1
   default-language:    Haskell2010
 
