--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -28,7 +28,10 @@ library
                      , MedianMaintenance
                      , RedBlackTree
                      , SearchTree
+                     , TwoSum
   build-depends:       base >= 4.7 && < 5
+                     , async >= 2.1.0
+                     , bitwise >= 0.1.1.1
                      , vector
                      , vector-algorithms
                      , containers >= 0.5.7.1
