--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -29,6 +29,8 @@ library
                      , RedBlackTree
                      , SearchTree
                      , TwoSum
+                     , JobScheduling
+                     , PrimsMST
   build-depends:       base >= 4.7 && < 5
                      , async >= 2.1.0
                      , bitwise >= 0.1.1.1
