Clustering in progress

--- a/algorithms/algorithms.cabal
+++ b/algorithms/algorithms.cabal
@@ -31,6 +31,7 @@ library
                      , TwoSum
                      , JobScheduling
                      , PrimsMST
+                     , MaxSpaceKCluster 
   build-depends:       base >= 4.7 && < 5
                      , async >= 2.1.0
                      , bitwise >= 0.1.1.1
@@ -40,6 +41,7 @@ library
                      , random >= 1.1
                      , parsec >= 3.1.11
                      , PSQueue >= 1.1
+                     , text
   default-language:    Haskell2010
 
 executable algorithms-exe
