--- a/algorithms/package.json
+++ b/algorithms/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "r": "NODE_OPTIONS=--max-old-space-size=8192 npx ts-node"
+    "r": "NODE_OPTIONS=\"--max-old-space-size=12000\" npx ts-node"
   },
   "author": "",
   "license": "ISC",
