--- a/algorithms/package.json
+++ b/algorithms/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.1",
+    "@types/source-map-support": "^0.5.6",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
