--- a/algorithms/package.json
+++ b/algorithms/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'exercises/tests/**/*.ts'",
     "r": "NODE_OPTIONS=\"--max-old-space-size=12000\" npx ts-node"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.1",
     "@types/source-map-support": "^0.5.6",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
     "tslib": "^2.4.0",
