--- a/algorithms/package.json
+++ b/algorithms/package.json
@@ -19,6 +19,7 @@
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.2",
     "tslib": "^2.4.0",
+    "tsun": "0.5.1",
     "typescript": "^4.7.4"
   }
 }
